deploy: 807499b4a4498537fc8e900153dbde96333a79e4

--- a/wj.htm
+++ b/wj.htm
@@ -15847,6 +15847,44 @@ for Multi.
          </td>
         </tr>
        </table>
+       <ul>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+           <td>
+            !MAX, 6+
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+           <td>
+            !MAX, 6+
+            <span class="scolor">
+             &spades;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
       </li>
       <li class="node">
        <table>
@@ -15858,10 +15896,7 @@ for Multi.
           </span>
          </td>
          <td>
-          F, 5+
-          <span class="ccolor">
-           &clubs;
-          </span>
+          NAT F
          </td>
         </tr>
        </table>
@@ -15876,10 +15911,7 @@ for Multi.
           </span>
          </td>
          <td>
-          F, 5+
-          <span class="dcolor">
-           &diams;
-          </span>
+          NAT F
          </td>
         </tr>
        </table>
@@ -15918,25 +15950,13 @@ for Multi.
        <table>
         <tr>
          <td class="node" rowspan="1">
-          3NT
-         </td>
-         <td>
-          S/O
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
           4
           <span class="ccolor">
            &clubs;
           </span>
          </td>
          <td>
-          !(R)
+          !STR choice of games
          </td>
         </tr>
        </table>
@@ -15951,7 +15971,7 @@ for Multi.
             </span>
            </td>
            <td>
-            TRF, 6+
+            !TRF, 6+
             <span class="hcolor">
              &hearts;
             </span>
@@ -15969,7 +15989,7 @@ for Multi.
             </span>
            </td>
            <td>
-            TRF, 6+
+            !TRF, 6+
             <span class="scolor">
              &spades;
             </span>
@@ -15989,50 +16009,12 @@ for Multi.
           </span>
          </td>
          <td>
-          !(R)
+          !PRE choice of games
          </td>
         </tr>
        </table>
-       <ul>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            4
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-           <td>
-            6+
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="last node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            4
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-           <td>
-            6+
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-       </ul>
       </li>
-      <li class="node">
+      <li class="last node">
        <table>
         <tr>
          <td class="node" rowspan="1">
@@ -16043,106 +16025,6 @@ for Multi.
          </td>
          <td>
           S/O
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="last node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          4
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          S/O
-         </td>
-        </tr>
-       </table>
-      </li>
-     </ul>
-    </li>
-   </ul>
-  </div>
-  <div class="tree">
-   <ul>
-    <li class="root">
-     2
-     <span class="dcolor">
-      &diams;
-     </span>
-     -2NT
-     <ul>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-         <td>
-          !MIN, 6+
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-         <td>
-          !MIN, 6+
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-         <td>
-          !MAX, 6+
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="last node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          !MAX, 6+
-          <span class="hcolor">
-           &hearts;
-          </span>
          </td>
         </tr>
        </table>
