--- a/blue.htm
+++ b/blue.htm
@@ -11078,6 +11078,44 @@ not yet shown a suit.
          </td>
         </tr>
        </table>
+       <ul>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+           <td>
+            !MAX, 6+
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+           <td>
+            !MAX, 6+
+            <span class="scolor">
+             &spades;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
       </li>
       <li class="node">
        <table>
@@ -11089,10 +11127,7 @@ not yet shown a suit.
           </span>
          </td>
          <td>
-          F, 5+
-          <span class="ccolor">
-           &clubs;
-          </span>
+          NAT F
          </td>
         </tr>
        </table>
@@ -11107,10 +11142,7 @@ not yet shown a suit.
           </span>
          </td>
          <td>
-          F, 5+
-          <span class="dcolor">
-           &diams;
-          </span>
+          NAT F
          </td>
         </tr>
        </table>
@@ -11149,25 +11181,13 @@ not yet shown a suit.
        <table>
         <tr>
          <td class="node" rowspan="1">
-          3NT
-         </td>
-         <td>
-          S/O
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
           4
           <span class="ccolor">
            &clubs;
           </span>
          </td>
          <td>
-          !(R)
+          !STR choice of games
          </td>
         </tr>
        </table>
@@ -11182,7 +11202,7 @@ not yet shown a suit.
             </span>
            </td>
            <td>
-            TRF, 6+
+            !TRF, 6+
             <span class="hcolor">
              &hearts;
             </span>
@@ -11200,7 +11220,7 @@ not yet shown a suit.
             </span>
            </td>
            <td>
-            TRF, 6+
+            !TRF, 6+
             <span class="scolor">
              &spades;
             </span>
@@ -11220,50 +11240,12 @@ not yet shown a suit.
           </span>
          </td>
          <td>
-          !(R)
+          !PRE choice of games
          </td>
         </tr>
        </table>
-       <ul>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            4
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-           <td>
-            6+
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="last node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            4
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-           <td>
-            6+
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-       </ul>
       </li>
-      <li class="node">
+      <li class="last node">
        <table>
         <tr>
          <td class="node" rowspan="1">
@@ -11274,106 +11256,6 @@ not yet shown a suit.
          </td>
          <td>
           S/O
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="last node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          4
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          S/O
-         </td>
-        </tr>
-       </table>
-      </li>
-     </ul>
-    </li>
-   </ul>
-  </div>
-  <div class="tree">
-   <ul>
-    <li class="root">
-     2
-     <span class="dcolor">
-      &diams;
-     </span>
-     -2NT
-     <ul>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-         <td>
-          !MIN, 6+
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-         <td>
-          !MIN, 6+
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-         <td>
-          !MAX, 6+
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="last node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          !MAX, 6+
-          <span class="hcolor">
-           &hearts;
-          </span>
          </td>
         </tr>
        </table>
