deploy: 116aad17dcb3c60ed42b11b8e6fcddcc8147f8fb

--- a/wj.htm
+++ b/wj.htm
@@ -15765,6 +15765,44 @@ for Multi.
          </td>
         </tr>
        </table>
+       <ul>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            4
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+           <td>
+            !TRF, better
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            4
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+           <td>
+            !TRF, better
+            <span class="scolor">
+             &spades;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
       </li>
       <li class="last node">
        <table>
