--- a/blue.htm
+++ b/blue.htm
@@ -447,7 +447,7 @@ on that topic.
           </span>
          </td>
          <td>
-          !PRE, 6+M, 4&ndash;10 HCP
+          !PRE, 6+M
          </td>
         </tr>
        </table>
@@ -456,36 +456,10 @@ on that topic.
        <table>
         <tr>
          <td class="node" rowspan="1">
-          2
-          <span class="hcolor">
-           &hearts;
-          </span>
+          2M
          </td>
          <td>
-          PRE, 5+
-          <span class="hcolor">
-           &hearts;
-          </span>
-          , 4+X, 4&ndash;10 HCP
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          PRE, 5+
-          <span class="scolor">
-           &spades;
-          </span>
-          , 4+m, 4&ndash;10 HCP
+          PRE, 5=#, 4+m
          </td>
         </tr>
        </table>
@@ -505,7 +479,6 @@ on that topic.
           <span class="ccolor">
            &clubs;
           </span>
-          , 4&ndash;10 HCP
          </td>
         </tr>
        </table>
@@ -517,7 +490,7 @@ on that topic.
           3X
          </td>
          <td>
-          PRE, 7+#, 4&ndash;10 HCP
+          PRE, usually 7+#
          </td>
         </tr>
        </table>
@@ -591,7 +564,6 @@ on that topic.
           <span class="ccolor">
            &clubs;
           </span>
-          , 10&ndash;16 HCP
          </td>
         </tr>
        </table>
@@ -603,18 +575,6 @@ on that topic.
   <p>
    Note that we don't open 11 HCP balanced hands.  Unlike aggressive sibling
 systems, we keep our opening range narrow for easier responses.
-  </p>
-  <p>
-   Besides, we don't preempt with maximum (9&ndash;10 HCP) 4+
-   <span class="scolor">
-    &spades;
-   </span>
-   and 5+
-   <span class="hcolor">
-    &hearts;
-   </span>
-   .  Anticipate
-partner to open and respond to find a game.
   </p>
   <h2>
    Choice of suit openings
@@ -11265,52 +11225,21 @@ not yet shown a suit.
    </ul>
   </div>
   <h1>
-   Extended Muiderberg
+   Muiderberg 2M
   </h1>
   <p>
    Weak twos in this bidding system show exactly 5 cards in the bid major and a
-side suit.  Multi 2
+side minor suit.  Multi 2
    <span class="dcolor">
     &diams;
    </span>
-   already takes care of 6+ cards.  In Muiderberg, the side
-suit must be a minor suit.  We extend 2
-   <span class="hcolor">
-    &hearts;
-   </span>
-   to include
-   <strong>
-    minimum
-   </strong>
-   4+
-   <span class="scolor">
-    &spades;
-   </span>
-   .
+   already takes care of 6+ cards.
   </p>
   <div class="tree">
    <ul>
     <li class="root">
-     2
-     <span class="hcolor">
-      &hearts;
-     </span>
+     2M
      <ul>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          !P/C
-         </td>
-        </tr>
-       </table>
-      </li>
       <li class="node">
        <table>
         <tr>
@@ -11369,24 +11298,6 @@ suit must be a minor suit.  We extend 2
             </span>
            </td>
            <td>
-            MIN, 4+
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            3
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-           <td>
             !MAX, 4+
             <span class="ccolor">
              &clubs;
@@ -11399,7 +11310,10 @@ suit must be a minor suit.  We extend 2
          <table>
           <tr>
            <td class="node" rowspan="1">
-            3NT
+            3
+            <span class="scolor">
+             &spades;
+            </span>
            </td>
            <td>
             !MAX, 4+
@@ -11426,44 +11340,6 @@ suit must be a minor suit.  We extend 2
          </td>
         </tr>
        </table>
-       <ul>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            3
-            <span class="dcolor">
-             &diams;
-            </span>
-           </td>
-           <td>
-            !P/C, 4+
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="last node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            3
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-           <td>
-            !P/C, 4+
-            <span class="dcolor">
-             &diams;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-       </ul>
       </li>
       <li class="last node">
        <table>
@@ -11475,10 +11351,7 @@ suit must be a minor suit.  We extend 2
           </span>
          </td>
          <td>
-          !INV+, 3+
-          <span class="hcolor">
-           &hearts;
-          </span>
+          !INV+, 3+M
          </td>
         </tr>
        </table>
@@ -11491,125 +11364,21 @@ suit must be a minor suit.  We extend 2
    <ul>
     <li class="root">
      2
-     <span class="scolor">
-      &spades;
+     <span class="hcolor">
+      &hearts;
      </span>
      <ul>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2NT
-         </td>
-         <td>
-          !INV+ (R)
-         </td>
-        </tr>
-       </table>
-       <ul>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            3
-            <span class="ccolor">
-             &clubs;
-            </span>
-           </td>
-           <td>
-            MIN, 4+
-            <span class="ccolor">
-             &clubs;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            3
-            <span class="dcolor">
-             &diams;
-            </span>
-           </td>
-           <td>
-            MIN, 4+
-            <span class="dcolor">
-             &diams;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            3
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-           <td>
-            !MAX, 4+
-            <span class="ccolor">
-             &clubs;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="last node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            3
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-           <td>
-            !MAX, 4+
-            <span class="dcolor">
-             &diams;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-       </ul>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-         <td>
-          !P/C
-         </td>
-        </tr>
-       </table>
-      </li>
       <li class="last node">
        <table>
         <tr>
          <td class="node" rowspan="1">
-          3
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-         <td>
-          !INV+, 3+
+          2
           <span class="scolor">
            &spades;
           </span>
+         </td>
+         <td>
+          NAT NF
          </td>
         </tr>
        </table>
