--- a/wj.htm
+++ b/wj.htm
@@ -515,7 +515,7 @@ problems, but I believe they can be solved by further adjustments.
           </span>
          </td>
          <td>
-          !PRE, 4&ndash;10 HCP, 4+
+          !PRE, 4+
           <span class="scolor">
            &spades;
           </span>
@@ -538,7 +538,7 @@ problems, but I believe they can be solved by further adjustments.
           </span>
          </td>
          <td>
-          !PRE, 4&ndash;10 HCP, 6+M,
+          !PRE, 6+M,
          </td>
         </tr>
        </table>
@@ -550,7 +550,7 @@ problems, but I believe they can be solved by further adjustments.
           2M
          </td>
          <td>
-          PRE, 4&ndash;10 HCP, 5=#, 4+m,
+          PRE, 5=#, 4+m,
          </td>
         </tr>
        </table>
@@ -562,7 +562,7 @@ problems, but I believe they can be solved by further adjustments.
           2NT
          </td>
          <td>
-          !UNT, 4&ndash;10 HCP, 5+
+          !UNT, 5+
           <span class="dcolor">
            &diams;
           </span>
@@ -581,7 +581,7 @@ problems, but I believe they can be solved by further adjustments.
           3X
          </td>
          <td>
-          PRE, 4&ndash;10 HCP, 7+#
+          PRE, 7+#
          </td>
         </tr>
        </table>
@@ -647,7 +647,7 @@ problems, but I believe they can be solved by further adjustments.
           4NT
          </td>
          <td>
-          !UNT, 11&ndash;15 HCP, 6+
+          !UNT, 6+
           <span class="dcolor">
            &diams;
           </span>
@@ -16072,52 +16072,21 @@ for Multi.
    </ul>
   </div>
   <h1>
-   Extended Muiderberg
+   Muiderberg 2M
   </h1>
   <p>
    Weak twos in this bidding system show exactly 5 cards in the bid major and a
-side suit.  Multi 2
+side minor suit.  Multi 2
    <span class="dcolor">
     &diams;
    </span>
-   already takes care of 6+ cards.  In Muiderberg, the side
-suit must be a minor suit.  We extend 2
-   <span class="hcolor">
-    &hearts;
-   </span>
-   to include
-   <strong>
-    minimum
-   </strong>
-   4+
-   <span class="scolor">
-    &spades;
-   </span>
-   .
+   already takes care of 6+ cards.
   </p>
   <div class="tree">
    <ul>
     <li class="root">
-     2
-     <span class="hcolor">
-      &hearts;
-     </span>
+     2M
      <ul>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          !P/C
-         </td>
-        </tr>
-       </table>
-      </li>
       <li class="node">
        <table>
         <tr>
@@ -16176,24 +16145,6 @@ suit must be a minor suit.  We extend 2
             </span>
            </td>
            <td>
-            MIN, 4+
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            3
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-           <td>
             !MAX, 4+
             <span class="ccolor">
              &clubs;
@@ -16206,7 +16157,10 @@ suit must be a minor suit.  We extend 2
          <table>
           <tr>
            <td class="node" rowspan="1">
-            3NT
+            3
+            <span class="scolor">
+             &spades;
+            </span>
            </td>
            <td>
             !MAX, 4+
@@ -16233,44 +16187,6 @@ suit must be a minor suit.  We extend 2
          </td>
         </tr>
        </table>
-       <ul>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            3
-            <span class="dcolor">
-             &diams;
-            </span>
-           </td>
-           <td>
-            !P/C, 4+
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="last node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            3
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-           <td>
-            !P/C, 4+
-            <span class="dcolor">
-             &diams;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-       </ul>
       </li>
       <li class="last node">
        <table>
@@ -16282,10 +16198,7 @@ suit must be a minor suit.  We extend 2
           </span>
          </td>
          <td>
-          !INV+, 3+
-          <span class="hcolor">
-           &hearts;
-          </span>
+          !INV+, 3+M
          </td>
         </tr>
        </table>
@@ -16298,125 +16211,21 @@ suit must be a minor suit.  We extend 2
    <ul>
     <li class="root">
      2
-     <span class="scolor">
-      &spades;
+     <span class="hcolor">
+      &hearts;
      </span>
      <ul>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2NT
-         </td>
-         <td>
-          !INV+ (R)
-         </td>
-        </tr>
-       </table>
-       <ul>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            3
-            <span class="ccolor">
-             &clubs;
-            </span>
-           </td>
-           <td>
-            MIN, 4+
-            <span class="ccolor">
-             &clubs;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            3
-            <span class="dcolor">
-             &diams;
-            </span>
-           </td>
-           <td>
-            MIN, 4+
-            <span class="dcolor">
-             &diams;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            3
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-           <td>
-            !MAX, 4+
-            <span class="ccolor">
-             &clubs;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="last node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            3
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-           <td>
-            !MAX, 4+
-            <span class="dcolor">
-             &diams;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-       </ul>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-         <td>
-          !P/C
-         </td>
-        </tr>
-       </table>
-      </li>
       <li class="last node">
        <table>
         <tr>
          <td class="node" rowspan="1">
-          3
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-         <td>
-          !INV+, 3+
+          2
           <span class="scolor">
            &spades;
           </span>
+         </td>
+         <td>
+          NAT NF
          </td>
         </tr>
        </table>
