--- a/wj.htm
+++ b/wj.htm
@@ -2218,9 +2218,9 @@ change 2
           </span>
          </td>
          <td>
-          !TRF, 5+
-          <span class="scolor">
-           &spades;
+          NF, 4+
+          <span class="hcolor">
+           &hearts;
           </span>
          </td>
         </tr>
@@ -2236,7 +2236,25 @@ change 2
           </span>
          </td>
          <td>
-          !TRF to 2NT
+          NF, 4+
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+         <td>
+          !FG STAY
          </td>
         </tr>
        </table>
@@ -2245,24 +2263,19 @@ change 2
          <table>
           <tr>
            <td class="node" rowspan="1">
-            2NT
-           </td>
-           <td>
-            2&ndash;4
-            <span class="scolor">
-             &spades;
-            </span>
-            , 2&ndash;4
-            <span class="hcolor">
-             &hearts;
-            </span>
-            , 2&ndash;6
+            3
             <span class="dcolor">
              &diams;
             </span>
-            , 2&ndash;6
-            <span class="ccolor">
-             &clubs;
+           </td>
+           <td>
+            !NEG, 0&ndash;3
+            <span class="scolor">
+             &spades;
+            </span>
+            , 0&ndash;3
+            <span class="hcolor">
+             &hearts;
             </span>
            </td>
           </tr>
@@ -2273,12 +2286,19 @@ change 2
             <tr>
              <td class="node" rowspan="1">
               3
-              <span class="ccolor">
-               &clubs;
+              <span class="hcolor">
+               &hearts;
               </span>
              </td>
              <td>
-              !STAY, may be Garbage
+              !Smolen TRF, 4=
+              <span class="hcolor">
+               &hearts;
+              </span>
+              , 5+
+              <span class="scolor">
+               &spades;
+              </span>
              </td>
             </tr>
            </table>
@@ -2288,21 +2308,24 @@ change 2
             <tr>
              <td class="node" rowspan="1">
               3
-              <span class="dcolor">
-               &diams;
+              <span class="scolor">
+               &spades;
               </span>
              </td>
              <td>
-              !TRF, 5+
+              !Smolen TRF, 4=
+              <span class="scolor">
+               &spades;
+              </span>
+              , 5+
               <span class="hcolor">
                &hearts;
               </span>
-              , not BAL
              </td>
             </tr>
            </table>
           </li>
-          <li class="last node">
+          <li class="node">
            <table>
             <tr>
              <td class="node" rowspan="1">
@@ -2312,9 +2335,27 @@ change 2
               </span>
              </td>
              <td>
-              !Texas TRF, 6+
+              !TRF, 6+
               <span class="hcolor">
                &hearts;
+              </span>
+             </td>
+            </tr>
+           </table>
+          </li>
+          <li class="last node">
+           <table>
+            <tr>
+             <td class="node" rowspan="1">
+              4
+              <span class="hcolor">
+               &hearts;
+              </span>
+             </td>
+             <td>
+              !TRF, 6+
+              <span class="scolor">
+               &spades;
               </span>
              </td>
             </tr>
@@ -2327,53 +2368,39 @@ change 2
           <tr>
            <td class="node" rowspan="1">
             3
-            <span class="ccolor">
-             &clubs;
-            </span>
-           </td>
-           <td>
-            5+
-            <span class="ccolor">
-             &clubs;
-            </span>
-            , not BAL
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            3
-            <span class="dcolor">
-             &diams;
-            </span>
-           </td>
-           <td>
-            5+
-            <span class="dcolor">
-             &diams;
-            </span>
-            , not BAL
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            3
             <span class="hcolor">
              &hearts;
             </span>
            </td>
            <td>
-            !FRAG, 44(41)
+            4=
+            <span class="hcolor">
+             &hearts;
+            </span>
            </td>
           </tr>
          </table>
+         <ul>
+          <li class="last node">
+           <table>
+            <tr>
+             <td class="node" rowspan="1">
+              3
+              <span class="scolor">
+               &spades;
+              </span>
+             </td>
+             <td>
+              BAL 4=
+              <span class="hcolor">
+               &hearts;
+              </span>
+              , choice of games
+             </td>
+            </tr>
+           </table>
+          </li>
+         </ul>
         </li>
         <li class="node">
          <table>
@@ -2385,7 +2412,14 @@ change 2
             </span>
            </td>
            <td>
-            !FRAG, 4144
+            4=
+            <span class="scolor">
+             &spades;
+            </span>
+            , 0&ndash;3
+            <span class="hcolor">
+             &hearts;
+            </span>
            </td>
           </tr>
          </table>
@@ -2397,7 +2431,7 @@ change 2
             3NT
            </td>
            <td>
-            !FRAG, 1444
+            4333
            </td>
           </tr>
          </table>
@@ -2408,61 +2442,54 @@ change 2
        <table>
         <tr>
          <td class="node" rowspan="1">
-          2NT
-         </td>
-         <td>
-          !TRF, 6+
-          <span class="ccolor">
-           &clubs;
-          </span>
-          or S/T 5+
-          <span class="dcolor">
-           &diams;
-          </span>
-          5+
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-         <td>
-          !TRF, 6+
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
           3
           <span class="dcolor">
            &diams;
           </span>
          </td>
          <td>
-          !TRF, 5
+          !FG TRF, 5+
           <span class="hcolor">
            &hearts;
           </span>
-          (332), choice of games
          </td>
         </tr>
        </table>
+       <ul>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+           <td>
+            2+
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3NT
+           </td>
+           <td>
+            SPL, 0&ndash;1
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
       </li>
       <li class="node">
        <table>
@@ -2474,51 +2501,159 @@ change 2
           </span>
          </td>
          <td>
-          !SPL, 0&ndash;1
-          <span class="hcolor">
-           &hearts;
-          </span>
-          , 2&ndash;3
-          <span class="scolor">
-           &spades;
-          </span>
-          , 4&ndash;5
-          <span class="dcolor">
-           &diams;
-          </span>
-          , 4&ndash;5
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
+          !FG TRF, 5+
           <span class="scolor">
            &spades;
           </span>
          </td>
-         <td>
-          !SPL, 0&ndash;1
+        </tr>
+       </table>
+       <ul>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="scolor">
+             &spades;
+            </span>
+           </td>
+           <td>
+            2+
+            <span class="scolor">
+             &spades;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3NT
+           </td>
+           <td>
+            SPL, 0&ndash;1
+            <span class="scolor">
+             &spades;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
           <span class="scolor">
            &spades;
           </span>
-          , 2&ndash;3
-          <span class="hcolor">
-           &hearts;
-          </span>
-          , 4&ndash;5
+         </td>
+         <td>
+          !Minor suit Multi/STAY, 6+m or 4+
           <span class="dcolor">
            &diams;
           </span>
-          , 4&ndash;5
+          4+
           <span class="ccolor">
            &clubs;
+          </span>
+         </td>
+        </tr>
+       </table>
+       <ul>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3NT
+           </td>
+           <td>
+            1&ndash;3
+            <span class="dcolor">
+             &diams;
+            </span>
+            , 1&ndash;3
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            4
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+           <td>
+            ! 4+
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            4
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+           <td>
+            ! 4+
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          4
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          !Texas TRF, 6+
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          4
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+         <td>
+          !Texas TRF, 6+
+          <span class="scolor">
+           &spades;
           </span>
          </td>
         </tr>
@@ -2528,10 +2663,20 @@ change 2
        <table>
         <tr>
          <td class="node" rowspan="1">
-          3NT
+          4
+          <span class="scolor">
+           &spades;
+          </span>
          </td>
          <td>
-          !Choice of games, 22(54)
+          !FG, 5+
+          <span class="dcolor">
+           &diams;
+          </span>
+          , 5+
+          <span class="ccolor">
+           &clubs;
+          </span>
          </td>
         </tr>
        </table>
