--- a/blue.htm
+++ b/blue.htm
@@ -6767,7 +6767,7 @@ Stayman takes care of invitation with 5+ spades.
           </span>
          </td>
          <td>
-          !F QUANT BW
+          !F QUANT
          </td>
         </tr>
        </table>
@@ -6813,62 +6813,14 @@ Stayman takes care of invitation with 5+ spades.
           </li>
          </ul>
         </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            5
-            <span class="ccolor">
-             &clubs;
-            </span>
-           </td>
-           <td>
-            !F, 17 HCP, 0 or 4 aces
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            5
-            <span class="dcolor">
-             &diams;
-            </span>
-           </td>
-           <td>
-            !F, 17 HCP, 1 ace
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            5
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-           <td>
-            !F, 17 HCP, 2 aces
-           </td>
-          </tr>
-         </table>
-        </li>
         <li class="last node">
          <table>
           <tr>
            <td class="node" rowspan="1">
-            5
-            <span class="scolor">
-             &spades;
-            </span>
+            5NT
            </td>
            <td>
-            !F, 17 HCP, 3 aces
+            !F, 17 HCP
            </td>
           </tr>
          </table>
@@ -6882,67 +6834,19 @@ Stayman takes care of invitation with 5+ spades.
           4NT
          </td>
          <td>
-          QUANT BW, INV to 6NT, NF
+          QUANT INV to 6NT, NF
          </td>
         </tr>
        </table>
        <ul>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            5
-            <span class="ccolor">
-             &clubs;
-            </span>
-           </td>
-           <td>
-            !F, 16&ndash;17 HCP, 0 or 4 aces
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            5
-            <span class="dcolor">
-             &diams;
-            </span>
-           </td>
-           <td>
-            !F, 16&ndash;17 HCP, 1 ace
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            5
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-           <td>
-            !F, 16&ndash;17 HCP, 2 aces
-           </td>
-          </tr>
-         </table>
-        </li>
         <li class="last node">
          <table>
           <tr>
            <td class="node" rowspan="1">
-            5
-            <span class="scolor">
-             &spades;
-            </span>
+            6NT
            </td>
            <td>
-            !F, 16&ndash;17 HCP, 3 aces
+            S/O, 16&ndash;17 HCP
            </td>
           </tr>
          </table>
@@ -6956,7 +6860,7 @@ Stayman takes care of invitation with 5+ spades.
           5NT
          </td>
          <td>
-          QUANT BW, INV to 7NT, F
+          QUANT INV to 7NT, F
          </td>
         </tr>
        </table>
@@ -6965,58 +6869,10 @@ Stayman takes care of invitation with 5+ spades.
          <table>
           <tr>
            <td class="node" rowspan="1">
-            6
-            <span class="ccolor">
-             &clubs;
-            </span>
+            6NT
            </td>
            <td>
-            !F, 16&ndash;17 HCP, 0 or 4 aces
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            6
-            <span class="dcolor">
-             &diams;
-            </span>
-           </td>
-           <td>
-            !F, 16&ndash;17 HCP, 1 ace
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            6
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-           <td>
-            !F, 16&ndash;17 HCP, 2 aces
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            6
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-           <td>
-            !F, 16&ndash;17 HCP, 3 aces
+            S/O, 15 HCP
            </td>
           </tr>
          </table>
@@ -7025,10 +6881,10 @@ Stayman takes care of invitation with 5+ spades.
          <table>
           <tr>
            <td class="node" rowspan="1">
-            6NT
+            7NT
            </td>
            <td>
-            S/O, 15 HCP
+            S/O, 16&ndash;17 HCP
            </td>
           </tr>
          </table>
@@ -7463,7 +7319,7 @@ Stayman takes care of invitation with 5+ spades.
           </span>
          </td>
          <td>
-          !F QUANT BW
+          !F QUANT
          </td>
         </tr>
        </table>
@@ -7475,7 +7331,7 @@ Stayman takes care of invitation with 5+ spades.
           4NT
          </td>
          <td>
-          QUANT BW, INV to 6NT
+          QUANT INV to 6NT
          </td>
         </tr>
        </table>
@@ -7487,7 +7343,7 @@ Stayman takes care of invitation with 5+ spades.
           5NT
          </td>
          <td>
-          QUANT BW, INV to 7NT
+          QUANT INV to 7NT
          </td>
         </tr>
        </table>
@@ -7687,7 +7543,7 @@ Stayman takes care of invitation with 5+ spades.
           </span>
          </td>
          <td>
-          !F QUANT BW
+          !F QUANT
          </td>
         </tr>
        </table>
@@ -7699,7 +7555,7 @@ Stayman takes care of invitation with 5+ spades.
           4NT
          </td>
          <td>
-          QUANT BW, INV to 6NT, 0&ndash;3
+          QUANT INV to 6NT, 0&ndash;3
           <span class="hcolor">
            &hearts;
           </span>
@@ -7714,7 +7570,7 @@ Stayman takes care of invitation with 5+ spades.
           5NT
          </td>
          <td>
-          QUANT BW, INV to 7NT, 0&ndash;3
+          QUANT INV to 7NT, 0&ndash;3
           <span class="hcolor">
            &hearts;
           </span>
@@ -7918,7 +7774,7 @@ Stayman takes care of invitation with 5+ spades.
           4NT
          </td>
          <td>
-          QUANT BW, INV to 6NT, 0&ndash;3
+          QUANT INV to 6NT, 0&ndash;3
           <span class="scolor">
            &spades;
           </span>
@@ -7933,7 +7789,7 @@ Stayman takes care of invitation with 5+ spades.
           5NT
          </td>
          <td>
-          QUANT BW, INV to 7NT, 0&ndash;3
+          QUANT INV to 7NT, 0&ndash;3
           <span class="scolor">
            &spades;
           </span>
@@ -8408,7 +8264,7 @@ problems like 1NT-2
           </span>
          </td>
          <td>
-          !F QUANT BW
+          !F QUANT
          </td>
         </tr>
        </table>
@@ -8420,7 +8276,7 @@ problems like 1NT-2
           4NT
          </td>
          <td>
-          QUANT BW, INV to 6NT
+          QUANT INV to 6NT
          </td>
         </tr>
        </table>
@@ -8432,7 +8288,7 @@ problems like 1NT-2
           5NT
          </td>
          <td>
-          QUANT BW, INV to 7NT
+          QUANT INV to 7NT
          </td>
         </tr>
        </table>
@@ -8836,7 +8692,7 @@ problems like 1NT-2
           4NT
          </td>
          <td>
-          QUANT BW, INV to 6NT
+          QUANT INV to 6NT
          </td>
         </tr>
        </table>
@@ -8848,7 +8704,7 @@ problems like 1NT-2
           5NT
          </td>
          <td>
-          QUANT BW, INV to 7NT
+          QUANT INV to 7NT
          </td>
         </tr>
        </table>
@@ -9020,7 +8876,7 @@ with P/C.
           </span>
          </td>
          <td>
-          !F QUANT BW
+          !F QUANT
          </td>
         </tr>
        </table>
@@ -9032,7 +8888,7 @@ with P/C.
           4NT
          </td>
          <td>
-          QUANT BW, INV to 6NT
+          QUANT INV to 6NT
          </td>
         </tr>
        </table>
@@ -9044,7 +8900,7 @@ with P/C.
           5NT
          </td>
          <td>
-          QUANT BW, INV to 7NT
+          QUANT INV to 7NT
          </td>
         </tr>
        </table>
