--- a/wj.htm
+++ b/wj.htm
@@ -11916,7 +11916,7 @@ Stayman takes care of invitation with 5+ spades.
           </span>
          </td>
          <td>
-          !F QUANT BW
+          !F QUANT
          </td>
         </tr>
        </table>
@@ -11962,62 +11962,14 @@ Stayman takes care of invitation with 5+ spades.
           </li>
          </ul>
         </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            5
-            <span class="ccolor">
-             &clubs;
-            </span>
-           </td>
-           <td>
-            !F, 17 HCP, 0 or 4 aces
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            5
-            <span class="dcolor">
-             &diams;
-            </span>
-           </td>
-           <td>
-            !F, 17 HCP, 1 ace
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            5
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-           <td>
-            !F, 17 HCP, 2 aces
-           </td>
-          </tr>
-         </table>
-        </li>
         <li class="last node">
          <table>
           <tr>
            <td class="node" rowspan="1">
-            5
-            <span class="scolor">
-             &spades;
-            </span>
+            5NT
            </td>
            <td>
-            !F, 17 HCP, 3 aces
+            !F, 17 HCP
            </td>
           </tr>
          </table>
@@ -12031,67 +11983,19 @@ Stayman takes care of invitation with 5+ spades.
           4NT
          </td>
          <td>
-          QUANT BW, INV to 6NT, NF
+          QUANT INV to 6NT, NF
          </td>
         </tr>
        </table>
        <ul>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            5
-            <span class="ccolor">
-             &clubs;
-            </span>
-           </td>
-           <td>
-            !F, 16&ndash;17 HCP, 0 or 4 aces
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            5
-            <span class="dcolor">
-             &diams;
-            </span>
-           </td>
-           <td>
-            !F, 16&ndash;17 HCP, 1 ace
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            5
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-           <td>
-            !F, 16&ndash;17 HCP, 2 aces
-           </td>
-          </tr>
-         </table>
-        </li>
         <li class="last node">
          <table>
           <tr>
            <td class="node" rowspan="1">
-            5
-            <span class="scolor">
-             &spades;
-            </span>
+            6NT
            </td>
            <td>
-            !F, 16&ndash;17 HCP, 3 aces
+            S/O, 16&ndash;17 HCP
            </td>
           </tr>
          </table>
@@ -12105,7 +12009,7 @@ Stayman takes care of invitation with 5+ spades.
           5NT
          </td>
          <td>
-          QUANT BW, INV to 7NT, F
+          QUANT INV to 7NT, F
          </td>
         </tr>
        </table>
@@ -12114,58 +12018,10 @@ Stayman takes care of invitation with 5+ spades.
          <table>
           <tr>
            <td class="node" rowspan="1">
-            6
-            <span class="ccolor">
-             &clubs;
-            </span>
+            6NT
            </td>
            <td>
-            !F, 16&ndash;17 HCP, 0 or 4 aces
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            6
-            <span class="dcolor">
-             &diams;
-            </span>
-           </td>
-           <td>
-            !F, 16&ndash;17 HCP, 1 ace
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            6
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-           <td>
-            !F, 16&ndash;17 HCP, 2 aces
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            6
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-           <td>
-            !F, 16&ndash;17 HCP, 3 aces
+            S/O, 15 HCP
            </td>
           </tr>
          </table>
@@ -12174,10 +12030,10 @@ Stayman takes care of invitation with 5+ spades.
          <table>
           <tr>
            <td class="node" rowspan="1">
-            6NT
+            7NT
            </td>
            <td>
-            S/O, 15 HCP
+            S/O, 16&ndash;17 HCP
            </td>
           </tr>
          </table>
@@ -12612,7 +12468,7 @@ Stayman takes care of invitation with 5+ spades.
           </span>
          </td>
          <td>
-          !F QUANT BW
+          !F QUANT
          </td>
         </tr>
        </table>
@@ -12624,7 +12480,7 @@ Stayman takes care of invitation with 5+ spades.
           4NT
          </td>
          <td>
-          QUANT BW, INV to 6NT
+          QUANT INV to 6NT
          </td>
         </tr>
        </table>
@@ -12636,7 +12492,7 @@ Stayman takes care of invitation with 5+ spades.
           5NT
          </td>
          <td>
-          QUANT BW, INV to 7NT
+          QUANT INV to 7NT
          </td>
         </tr>
        </table>
@@ -12836,7 +12692,7 @@ Stayman takes care of invitation with 5+ spades.
           </span>
          </td>
          <td>
-          !F QUANT BW
+          !F QUANT
          </td>
         </tr>
        </table>
@@ -12848,7 +12704,7 @@ Stayman takes care of invitation with 5+ spades.
           4NT
          </td>
          <td>
-          QUANT BW, INV to 6NT, 0&ndash;3
+          QUANT INV to 6NT, 0&ndash;3
           <span class="hcolor">
            &hearts;
           </span>
@@ -12863,7 +12719,7 @@ Stayman takes care of invitation with 5+ spades.
           5NT
          </td>
          <td>
-          QUANT BW, INV to 7NT, 0&ndash;3
+          QUANT INV to 7NT, 0&ndash;3
           <span class="hcolor">
            &hearts;
           </span>
@@ -13067,7 +12923,7 @@ Stayman takes care of invitation with 5+ spades.
           4NT
          </td>
          <td>
-          QUANT BW, INV to 6NT, 0&ndash;3
+          QUANT INV to 6NT, 0&ndash;3
           <span class="scolor">
            &spades;
           </span>
@@ -13082,7 +12938,7 @@ Stayman takes care of invitation with 5+ spades.
           5NT
          </td>
          <td>
-          QUANT BW, INV to 7NT, 0&ndash;3
+          QUANT INV to 7NT, 0&ndash;3
           <span class="scolor">
            &spades;
           </span>
@@ -13557,7 +13413,7 @@ problems like 1NT-2
           </span>
          </td>
          <td>
-          !F QUANT BW
+          !F QUANT
          </td>
         </tr>
        </table>
@@ -13569,7 +13425,7 @@ problems like 1NT-2
           4NT
          </td>
          <td>
-          QUANT BW, INV to 6NT
+          QUANT INV to 6NT
          </td>
         </tr>
        </table>
@@ -13581,7 +13437,7 @@ problems like 1NT-2
           5NT
          </td>
          <td>
-          QUANT BW, INV to 7NT
+          QUANT INV to 7NT
          </td>
         </tr>
        </table>
@@ -13985,7 +13841,7 @@ problems like 1NT-2
           4NT
          </td>
          <td>
-          QUANT BW, INV to 6NT
+          QUANT INV to 6NT
          </td>
         </tr>
        </table>
@@ -13997,7 +13853,7 @@ problems like 1NT-2
           5NT
          </td>
          <td>
-          QUANT BW, INV to 7NT
+          QUANT INV to 7NT
          </td>
         </tr>
        </table>
@@ -14169,7 +14025,7 @@ with P/C.
           </span>
          </td>
          <td>
-          !F QUANT BW
+          !F QUANT
          </td>
         </tr>
        </table>
@@ -14181,7 +14037,7 @@ with P/C.
           4NT
          </td>
          <td>
-          QUANT BW, INV to 6NT
+          QUANT INV to 6NT
          </td>
         </tr>
        </table>
@@ -14193,7 +14049,7 @@ with P/C.
           5NT
          </td>
          <td>
-          QUANT BW, INV to 7NT
+          QUANT INV to 7NT
          </td>
         </tr>
        </table>
