deploy: 6153956a21efec17622259c20d7c19426cda615c

--- a/blue.htm
+++ b/blue.htm
@@ -6487,7 +6487,7 @@ Stayman takes care of invitation with 5+ spades.
           </span>
          </td>
          <td>
-          !STAY, Garbage STAY, or INV 5+
+          !STAY, Garbage STAY, or INV 5=
           <span class="scolor">
            &spades;
           </span>
@@ -6541,7 +6541,7 @@ Stayman takes care of invitation with 5+ spades.
           </span>
          </td>
          <td>
-          !Minor suit Multi/STAY, 6+m or 4+
+          !Minor suit Multi/STAY, 6+m or FG 4+
           <span class="dcolor">
            &diams;
           </span>
@@ -6657,69 +6657,10 @@ Stayman takes care of invitation with 5+ spades.
           </span>
          </td>
          <td>
-          !Gerber, ask for aces
+          !Gerber BW
          </td>
         </tr>
        </table>
-       <ul>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            4
-            <span class="dcolor">
-             &diams;
-            </span>
-           </td>
-           <td>
-            ! 0 or 4 aces
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            4
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-           <td>
-            ! 1 ace
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            4
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-           <td>
-            ! 2 aces
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="last node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            4NT
-           </td>
-           <td>
-            ! 3 aces
-           </td>
-          </tr>
-         </table>
-        </li>
-       </ul>
       </li>
       <li class="node">
        <table>
@@ -7260,7 +7201,7 @@ Stayman takes care of invitation with 5+ spades.
           </span>
          </td>
          <td>
-          !Gerber, ask for aces
+          !Gerber BW
          </td>
         </tr>
        </table>
@@ -8825,7 +8766,7 @@ with P/C.
           </span>
          </td>
          <td>
-          !Gerber, ask for aces
+          !Gerber BW
          </td>
         </tr>
        </table>
