--- a/wj.htm
+++ b/wj.htm
@@ -1728,13 +1728,7 @@ Ting-Yu Ye (TpKotoba).
    <span class="dcolor">
     &diams;
    </span>
-   -1NT is similar to the 1NT opening.  We don't
-need minor transfers here since we have already bid both minors.  Therefore, we
-change 2
-   <span class="scolor">
-    &spades;
-   </span>
-   to a minor suit Multi/Stayman.
+   -1NT is similar to the 1NT opening.
   </p>
   <div class="tree">
    <ul>
@@ -1759,7 +1753,10 @@ change 2
           </span>
          </td>
          <td>
-          !STAY, may be Garbage
+          !STAY, Garbage STAY, or INV 5=
+          <span class="scolor">
+           &spades;
+          </span>
          </td>
         </tr>
        </table>
@@ -1810,7 +1807,7 @@ change 2
           </span>
          </td>
          <td>
-          !Minor suit Multi/STAY, 6+m or 4+
+          !Minor suit Multi/STAY, 6+m or FG 4+
           <span class="dcolor">
            &diams;
           </span>
@@ -1937,21 +1934,13 @@ change 2
           </span>
          </td>
          <td>
-          !SPL, 0&ndash;1
-          <span class="hcolor">
-           &hearts;
-          </span>
-          , 2&ndash;3
+          !INV, 5+
           <span class="scolor">
            &spades;
           </span>
-          , 4&ndash;5
-          <span class="dcolor">
-           &diams;
-          </span>
-          , 4&ndash;5
-          <span class="ccolor">
-           &clubs;
+          , 5+
+          <span class="hcolor">
+           &hearts;
           </span>
          </td>
         </tr>
@@ -1967,165 +1956,46 @@ change 2
           </span>
          </td>
          <td>
-          !SPL, 0&ndash;1
+          !Choice of games, 5+
           <span class="scolor">
            &spades;
-          </span>
-          , 2&ndash;3
-          <span class="hcolor">
-           &hearts;
-          </span>
-          , 4&ndash;5
-          <span class="dcolor">
-           &diams;
-          </span>
-          , 4&ndash;5
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3NT
-         </td>
-         <td>
-          S/O
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          4
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-         <td>
-          !Gerber, ask for aces
-         </td>
-        </tr>
-       </table>
-       <ul>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            4
-            <span class="dcolor">
-             &diams;
-            </span>
-           </td>
-           <td>
-            ! 0 or 4 aces
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            4
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-           <td>
-            ! 1 ace
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            4
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-           <td>
-            ! 2 aces
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="last node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            4NT
-           </td>
-           <td>
-            ! 3 aces
-           </td>
-          </tr>
-         </table>
-        </li>
-       </ul>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          4
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-         <td>
-          !Texas TRF, 6+
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          4
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-         <td>
-          !Texas TRF, 6+
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          4
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          !FG, 5+
-          <span class="dcolor">
-           &diams;
           </span>
           , 5+
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          4
           <span class="ccolor">
            &clubs;
+          </span>
+         </td>
+         <td>
+          !Gerber BW
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          4
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          !Texas TRF, 6+
+          <span class="hcolor">
+           &hearts;
           </span>
          </td>
         </tr>
@@ -2135,10 +2005,16 @@ change 2
        <table>
         <tr>
          <td class="node" rowspan="1">
-          4NT
+          4
+          <span class="hcolor">
+           &hearts;
+          </span>
          </td>
          <td>
-          QUANT INV to 6NT
+          !Texas TRF, 6+
+          <span class="scolor">
+           &spades;
+          </span>
          </td>
         </tr>
        </table>
@@ -2221,7 +2097,7 @@ change 2
           2NT
          </td>
          <td>
-          NAT INV, 7&ndash;9 HCP
+          NAT INV, 6+ HCP
          </td>
         </tr>
        </table>
@@ -2241,7 +2117,7 @@ change 2
         </tr>
        </table>
       </li>
-      <li class="node">
+      <li class="last node">
        <table>
         <tr>
          <td class="node" rowspan="1">
@@ -2256,46 +2132,19 @@ change 2
         </tr>
        </table>
       </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-         <td>
-          NF, 4&ndash;6 HCP, 6+
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="last node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          NF, 4&ndash;6 HCP, 6+
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
      </ul>
     </li>
    </ul>
   </div>
+  <p>
+   The 2
+   <span class="dcolor">
+    &diams;
+   </span>
+   rebid shows a nearly balanced hand with 21&ndash;23 HCP.  If you can force
+to game, bid as if partner opened a natural 2NT.  Otherwise, try to sign off at
+the 2-level.
+  </p>
   <div class="tree">
    <ul>
     <li class="root">
@@ -2658,7 +2507,7 @@ change 2
           </span>
          </td>
          <td>
-          !Minor suit Multi/STAY, 6+m or 4+
+          !FG minor suit Multi/STAY, 6+m or 4+
           <span class="dcolor">
            &diams;
           </span>
@@ -2745,7 +2594,7 @@ change 2
         </tr>
        </table>
       </li>
-      <li class="node">
+      <li class="last node">
        <table>
         <tr>
          <td class="node" rowspan="1">
@@ -2758,28 +2607,6 @@ change 2
           !Texas TRF, 6+
           <span class="scolor">
            &spades;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="last node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          4
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          !FG, 5+
-          <span class="dcolor">
-           &diams;
-          </span>
-          , 5+
-          <span class="ccolor">
-           &clubs;
           </span>
          </td>
         </tr>
@@ -12146,7 +11973,7 @@ Stayman takes care of invitation with 5+ spades.
           </span>
          </td>
          <td>
-          !STAY, Garbage STAY, or INV 5+
+          !STAY, Garbage STAY, or INV 5=
           <span class="scolor">
            &spades;
           </span>
@@ -12200,7 +12027,7 @@ Stayman takes care of invitation with 5+ spades.
           </span>
          </td>
          <td>
-          !Minor suit Multi/STAY, 6+m or 4+
+          !Minor suit Multi/STAY, 6+m or FG 4+
           <span class="dcolor">
            &diams;
           </span>
@@ -12316,69 +12143,10 @@ Stayman takes care of invitation with 5+ spades.
           </span>
          </td>
          <td>
-          !Gerber, ask for aces
+          !Gerber BW
          </td>
         </tr>
        </table>
-       <ul>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            4
-            <span class="dcolor">
-             &diams;
-            </span>
-           </td>
-           <td>
-            ! 0 or 4 aces
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            4
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-           <td>
-            ! 1 ace
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            4
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-           <td>
-            ! 2 aces
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="last node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            4NT
-           </td>
-           <td>
-            ! 3 aces
-           </td>
-          </tr>
-         </table>
-        </li>
-       </ul>
       </li>
       <li class="node">
        <table>
@@ -12919,7 +12687,7 @@ Stayman takes care of invitation with 5+ spades.
           </span>
          </td>
          <td>
-          !Gerber, ask for aces
+          !Gerber BW
          </td>
         </tr>
        </table>
@@ -14484,7 +14252,7 @@ with P/C.
           </span>
          </td>
          <td>
-          !Gerber, ask for aces
+          !Gerber BW
          </td>
         </tr>
        </table>
