deploy: 80e36dd5a8172830e42e9e58c0cff21b4cb211c3

--- a/wj.htm
+++ b/wj.htm
@@ -4167,8 +4167,11 @@ relays in the three-way checkback:
    <span class="ccolor">
     &clubs;
    </span>
-   as a transfer so that responder can show attitude toward a
-15&ndash;17 HCP opener.
+   as a Lebensohl-like relay to park invitational hands.  Consequently, we need to move game-forcing clubs to 3
+   <span class="scolor">
+    &spades;
+   </span>
+   .
   </p>
   <div class="tree">
    <ul>
@@ -4433,6 +4436,10 @@ relays in the three-way checkback:
           <span class="dcolor">
            &diams;
           </span>
+          , 0&ndash;2
+          <span class="hcolor">
+           &hearts;
+          </span>
          </td>
         </tr>
        </table>
@@ -4447,15 +4454,15 @@ relays in the three-way checkback:
           </span>
          </td>
          <td>
-          !FG TRF, 18+ HCP, 5+
-          <span class="ccolor">
-           &clubs;
+          FG, 18+ HCP, 5+
+          <span class="dcolor">
+           &diams;
           </span>
          </td>
         </tr>
        </table>
       </li>
-      <li class="last node">
+      <li class="node">
        <table>
         <tr>
          <td class="node" rowspan="1">
@@ -4472,6 +4479,39 @@ relays in the three-way checkback:
           , 3=
           <span class="hcolor">
            &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          !FG TRF, 18+ HCP, 6+
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3NT
+         </td>
+         <td>
+          Mild S/T, 21&ndash;23 HCP, 4=
+          <span class="scolor">
+           &spades;
           </span>
          </td>
         </tr>
