deploy: 47aaac7eeddd952c5a17f068d7fd5595d6889912

--- a/wj.htm
+++ b/wj.htm
@@ -4159,15 +4159,16 @@ relays in the three-way checkback:
    </ul>
   </div>
   <p>
-   We need ...2
+   After the BTU checkback 2
    <span class="ccolor">
     &clubs;
    </span>
-   -3
+   , we need 3
    <span class="ccolor">
     &clubs;
    </span>
-   as a Lebensohl-like relay to park invitational hands.  Consequently, we need to move game-forcing clubs to 3
+   as a Lebensohl-like relay to park
+invitational hands.  Consequently, we need to move game-forcing clubs to 3
    <span class="scolor">
     &spades;
    </span>
